edits to plotting lab

--- a/ENGR114-Labs/Lab04-Plotting_Weather_Data/ENGR114-Lab04-Plotting_Weather_Data.ipynb
+++ b/ENGR114-Labs/Lab04-Plotting_Weather_Data/ENGR114-Lab04-Plotting_Weather_Data.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Prelab\n",
     "\n",
-    "Before starting your Jupyter notebook, read through this entire document, then create a pseudocode outline of what your program will do.   Use separate the markdown sections that describe what each of sections of code will do. Describe what the plots will look like in the markdown blocks."
+    "Before starting you start coding, read through this entire document, then create a pseudocode outline of what your program will do.   Use separate the markdown sections that describe what each of sections of code will do. Describe what type of plot you will build and what the plots will look like in your pseudocode."
    ]
   },
   {
@@ -22,9 +22,9 @@
    "source": [
     "## Lab\n",
     "\n",
-    "Download the Excel data file titled ```govt_camp_2013_01_to_2016_03.xlsx]``` and save it to your preferred working directory. The directory where the Excel data file is placed needs to be the same directory you build the Jupyter notebook in.  The Excel file contains daily weather data points gathered from the USGS weather station in Government Camp, OR from Jan 1, 2009 to Mar 31, 2016.  The measurements and their units are given in the column headers (first row) of the spreadsheet. \n",
+    "Download the Excel spreadsheet file titled ```govt_camp_2013_01_to_2016_03.xlsx``` and save it to your preferred working directory. The directory where the Excel data file is placed needs to be the same directory you build the Jupyter notebook in.  The Excel file contains daily weather data points gathered from the USGS weather station in Government Camp, OR from Jan 1, 2009 to Mar 31, 2016.  The measurements and their units are given in the column headers (first row) of the spreadsheet. \n",
     "\n",
-    "At the start of your lab, include a header in a Jupyter notebook markdown cell that contains the lab name, your name, the course, quarter and data. Below the header import the libraries you will use in the rest of the lab. Note that NumPy is imported as ```np```, Pandas is imported as ```pd``` and Matplotlib's pyplot library is imported as ```plt```. The three import aliases ```np```, ```pd```, and ```plt``` are commonly used in Python. The line ```%matplotlib inline``` is a Jupyter notebook command to cause Matplotlib plots to disply directly in a Jupyter notebook. If you are building a ```.py``` file instead of a Jupyter notebook ```.ipynb``` file, leave out ```%matplotlib inline``` as this line is not valid Python code. \n",
+    "At the start of your lab, include a header in a Jupyter notebook markdown cell that contains the lab name, your name, the course, quarter and date. Below the header import the libraries you will use in the rest of the lab. Note that NumPy is imported as ```np```, Pandas is imported as ```pd``` and Matplotlib's pyplot library is imported as ```plt```. The three import aliases ```np```, ```pd```, and ```plt``` are commonly used in Python. The line ```%matplotlib inline``` is a Jupyter notebook command, not valid Python code.  ```%matplotlib inline``` results in Matplotlib plots which are displayed directly in a Jupyter notebook, instead of popping out as a seperate window. If you build a ```.py``` file instead of a Jupyter notebook ```.ipynb``` file, leave out ```%matplotlib inline```. \n",
     "\n",
     "The Jupyter notebook code cell below shows the imports described above."
    ]
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, use Panda's ```pd.read_csv()``` function to read the ```.xlsx``` data file into a Pandas _dataframe_ called ```df```. The Panda's method ```df.head()``` will show the first couple rows of the dataframe ```df```.\n",
+    "Next, use Panda's ```pd.read_csv()``` function to read the ```.xlsx``` data file into a Pandas _dataframe_ called ```df```. The Panda's method ```df.head()``` shows the first couple rows of the dataframe ```df```.\n",
     "\n",
     "The code below saves the excel sheet to the variable ```df``` and show's the first couple rows of ```df```."
    ]
@@ -186,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The third column of the Pandas dataframe represents the date on which the observations in that row were recorded.  For example, the first row of data (index 0) contains a value of ```20130101``` in the ```DATE``` column.  The value ```20130101``` means January  01, 2013. \n",
+    "The third column of the Pandas dataframe represents the date on which the observations in that row were recorded.  For example, the first row of data (index 0) contains a value of ```20130101``` in the ```DATE``` column.  The value ```20130101``` means January  01, 2013. The date format is ```YEAR-MONOTH-DAY```.\n",
     "\n",
     "Remove the first two columns of the dataframe ```df``` so that the resulting first column in the dataframe is the ```DATE``` column. You can use ```df.head()``` to view the dataframe after the two columns are removed.\n",
     "\n",
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the resulting dataframe, first column now represents the date on which the observations in that row were measured.  For example, row 48 of the dataframe contains a value of ```20130219```.  This means February 19, 2013.  Replace column 1 of the dataframe ```df``` (the ```DATE``` column) with 3 columns containing the ```year``` in the first column, the ```month``` in the second column, and the ```day``` of the month in the third column.  When you are finished, your dataframe ```df``` should be ```1186 x 8``` and it's first row should have the following values:\n",
+    "In the resulting dataframe, first column now represents the date on which the observations in that row were measured.  For example, row 48 of the dataframe contains a value of ```20130219```.  This means February 19, 2013.  Replace column 1 of the dataframe ```df``` (the ```DATE``` column) with 3 columns containing the ```year``` in the first column, the ```month``` in the second column, and the ```day``` of the month in the third column.  When you are finished, your dataframe ```df``` should be ```1186 x 8``` and the dataframe's first row should have the following values:\n",
     "\n",
     "```text\n",
     "2013    1     1    0.00    44    0.0    29    12 \n",
@@ -404,7 +404,7 @@
    "source": [
     "### Create a line plot with two lines\n",
     "\n",
-    "Next, create a Matplotlib line plot that shows the maximum and minimum temperatures in 2013 on two lines. Look back at the datafrome ```df``` to determine which columns correspond to the maximum and minimum temperatures recorded on each day. The maximum temp should be a red line and the minimum temp should be a blue line. Include a legend that shows ```Max Temp``` and ```Min Temp```. Include axis labels and a title on the plot.\n",
+    "Next, create a Matplotlib line plot that shows the maximum and minimum temperatures in 2013 on two lines. Look back at the datafrome ```df``` to determine which columns correspond to the maximum and minimum temperatures recorded each day. The maximum temp should be a red line and the minimum temp should be a blue line. Include a legend that shows ```Max Temp``` and ```Min Temp```. Include axis labels and a title on the plot.\n",
     "\n",
     "The resulting plot should look something like the plot below:\n",
     "\n",
@@ -421,7 +421,7 @@
     "\n",
     "Use NumPy's ```np.where()``` function to save the precipitation data (number of inches only) exclusively for days in the year 2013 to a NumPy array called ```precip_2013```. Use the ```plt.subplots()``` method to plot the ```precip_2013``` data in the first subplot. \n",
     "\n",
-    "Do the same for the precipitation data for 2014, then 2015, then 2016 and create a subplot for each. The plot for 2016 should include an x-axis label and have the same axis limits as the x-axis limits as the other subplots.\n",
+    "Complete the same indexing operation on the precipitation data for 2014, then 2015, then 2016. Create a subplot for each year. The plot for 2016 should include an x-axis label and have the same axis limits as the x-axis limits in the other subplots.\n",
     "\n",
     "The resulting figure which contains four subplots, one subplot for each year, should look something like below: \n",
     "\n",
@@ -434,7 +434,7 @@
    "source": [
     "### y-y plot\n",
     "\n",
-    "Use boolean masking to save some of the snow depth data into a NumPy array called ```winter13_14_sd```.  Remember which column headers correspond to which measurement in the dataframe ```df```.  Refer to the dataframe or excel file, if need be, to see which column corresponds snow depth.  Your snow depth data set should only include measurements from the first day of November 2013 to the last day of February 2014.  Slicing or indexing out snow depth data in this date range is probably be the most difficult part of this lab.\n",
+    "Use boolean masking to save some of the snow depth data into a NumPy array called ```winter13_14_sd```.  Remember which column headers correspond to which measurement in the dataframe ```df```.  Refer to the dataframe or Excel file, if need be, to see which column corresponds snow depth.  Your snow depth data set should only include measurements from the first day of November 2013 to the last day of February 2014.  Slicing or indexing out snow depth data in this date range is probably be the most difficult part of this lab.\n",
     "\n",
     " > Hint: Create multiple boolean masks and then combine the boolean masks with NumPy's ```np.logical_and()``` and ```np.logical_or()``` functions. These two NumPy functions operate like Python's ```and```, ```or``` keywords, but can be applied to arrays of boolean values.\n",
     "\n",
@@ -444,7 +444,7 @@
     "\n",
     "Notice the figure has a different vertical axis on the left compared to the vertical axis on the right.  Let Matplotlib choose your axis limits and line colors.  Be sure to include the grid lines, x-axis label, y-axis labels, title, and legend as seen in the figure below.\n",
     "\n",
-    "![Plot 4: y-y Plot](images/plot4.png)"
+    "![Plot 4: y-y Plot](images/yyplot.png)"
    ]
   },
   {
@@ -453,7 +453,7 @@
    "source": [
     "### Histogram\n",
     "\n",
-    "The last plot to create for this lab is a histogram. A histogram is a statistical plot that shows the number of values that fall into different value ranges, called bins. Use your ```winter13_14_sf``` NumPy array to build the histogram. Include 10 bins in the histogram. Make sure to match all of the labels and title from the example histogram below.\n",
+    "The final plot to create for this lab is a histogram. A histogram is a statistical plot that shows the number of values that fall into different value ranges, called bins. Use your ```winter13_14_sf``` NumPy array to build the histogram. Include 10 bins in the histogram. Make sure to match all of the labels and title from the example histogram below.\n",
     "\n",
     "![Plot 5: Histogram](images/plot5.png)"
    ]
@@ -510,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
