--- a/ENGR114-Labs/Lab08-MicroPython/ENGR114-Lab08-MicroPython.ipynb
+++ b/ENGR114-Labs/Lab08-MicroPython/ENGR114-Lab08-MicroPython.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "[MicroPython](http://micropython.org/) is a port, or version of Python designed to run on small, inexpensive, low-power microcontrollers. Traditionally, Python is run on a desktop or laptop computer (also on cloud servers). Compared to a desktop or laptop, microcontrollers are much smaller, cheaper and less powerful.  A \"regular\" version of Python can't run on small, cheap microcontrollers because Python is too resource intensive. Regular Python takes up too much hard disk space, runs on too much RAM and requires a more powerful processor than microcontrollers have. \n",
     "\n",
-    "To get MicroPython to run at all on these small microcontroller boards, MicroPython only contains a subset of all the standard library modules included with \"regular\" Python. Some of the libraries that are included with MicroPython don't have the full set of functions and classes that come with the full version of Python. This limited functionality allows MicroPython to be compact (around 600 kB for the ESP8266 port) and only use a small amount of RAM (down to 16k according to the [Micropython main page](https://micropython.org/).)"
+    "To get MicroPython to run at all on these small, cheap microcontrollers, MicroPython only contains a subset of all the Standard Library modules included with \"regular\" Python. Some of the libraries that are included with MicroPython don't have the full set of functions and classes that come with the full version of Python. This limited functionality allows MicroPython to be compact (around 600 kB for the ESP8266 port) and only use a small amount of RAM (down to 16kB according to the [Micropython main page](https://micropython.org/).)"
    ]
   },
   {
@@ -22,7 +22,7 @@
    "source": [
     "## Prelab\n",
     "\n",
-    "Before you start the lab, try using the MicroPython online with a broswer-based [MicroPython online emulator](https://micropython.org/unicorn/). The emulator allows you to run commands at a MicroPython Prompt and see the result on a virtual pyboard.\n",
+    "Before you start the lab, try using the MicroPython online with a broswer-based [MicroPython online emulator](https://micropython.org/unicorn/). The emulator allows you to run commands at a MicroPython Prompt and see the result on a virtual Pyboard. The Pyboard is one of the microcontrollers that MicroPython runs on.\n",
     "\n",
     "Also browse through the [MicroPython Docs](https://docs.micropython.org/en/latest/) and in particular the [ESP8266](https://docs.micropython.org/en/latest/esp8266/quickref.html) section. You will use an ESP8266-based microcontroller in this lab."
    ]
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use Windows Device Manager to determine which serial port the Feather Huzzah is connected to. O Windows 10, the microcontroller usually comes up as ```COM4```. You can find the serial port by looking in the Ports (COM & LPT) category of the Windows Device Manager. Look for something like **Silicon Labs CP210x USB to UART Bridge (COM4)** in the **Ports (COM & LPT)** menu. It is the **COM#** that you are looking for.\n",
+    "Use Windows Device Manager to determine which serial port the Feather Huzzah is connected to. On Windows 10, the microcontroller usually comes up as ```COM4```. You can find the serial port by looking in the Ports (COM & LPT) category of the Windows Device Manager. Look for something like **Silicon Labs CP210x USB to UART Bridge (COM4)** in the **Ports (COM & LPT)** menu. It is the **COM#** that you are looking for.\n",
     "\n",
     "![Find the Windows 10 Device Manager](images/find_device_manager.png)\n",
     "\n",
@@ -86,13 +86,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ensure the ESP8266 board is connected with a USB cable, then connect to it with a program called PuTTY. Set the proper serial port (COM#) and and specify 115200 baud. Remember to use the **Serial** radio button under **Connection Type:** to select serial communication or you will be trying to communicate with the ESP8266 Microcontroller over SSH which won't work. \n",
+    "Ensure the ESP8266 board is connected to the computer with a USB cable, then open a program called PuTTY. PuTTY is the program we will use to communicate with the ESP8266 board. In PUTTY, set the proper serial port (COM#) and specify 115200 baud. Remember to use the **Serial** radio button under **Connection Type:** to select serial communication or you will be trying to communicate with the ESP8266 Microcontroller over SSH which won't work. \n",
     "\n",
     "![PuTTY in Windows 10 start menu](images/putty_in_start_menu.png)\n",
     "\n",
     "![PuTTY configuration](images/putty_config.PNG)\n",
     "\n",
-    "This should bring up the MicroPython REPL prompt ```>>>```. If you can't see the ```>>>``` prompt, try typing [Enter], Ctrl-D, pushing the RESET button on the ESP8266 microcontroller or unplugging then replugging the USB cable.\n",
+    "Clicking [Open] should bring up the MicroPython REPL prompt ```>>>```. If you can't see the ```>>>``` prompt, try typing [Enter], Ctrl-D, pushing the RESET button on the ESP8266 microcontroller. You can also try unplugging then replugging in the USB cable connected to the microcontroller.\n",
     "\n",
     "![MicroPython REPL prompt](images/REPL_prompt.PNG)"
    ]
@@ -112,7 +112,7 @@
     "\n",
     "```text\n",
     ">>> print('MicroPython for Engineers!')\n",
-    "MicroPython for Engineers\n",
+    "MicroPython for Engineers!\n",
     "```\n",
     "\n",
     "If we import the ```sys``` module, we can see the MicroPython implementation and platform. \n",
@@ -127,7 +127,7 @@
     "\n",
     "![Results of running sys commands at the MicroPython REPL prompt](images/sys_dot_implementation_and_platform.PNG)\n",
     "\n",
-    "If you see similar output, that means MicroPython is working on the ESP8266 Microcontroller. We can also view the flash memory size of our microcontroller and the size of the MicroPython firmware we installed. Try this at the MicroPython prompt:\n",
+    "If you see similar output, that means MicroPython is working on the ESP8266 Microcontroller. We can also view the flash memory size of our microcontroller and the size of the MicroPython firmware installed on the board. Try the command below at the MicroPython prompt:\n",
     "\n",
     "```text\n",
     ">>> import port_diag\n",
@@ -149,14 +149,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The ESP8266 microcontroller as a built-in red LED mounted on the board close to the USB cable input. MicroPython can be used to blink this LED on and off."
+    "MicroPython can be used to blink an LED on and off. Connect an LED to the board using jumper wires, a resistor and a breadboard. The ESP8266 microcontroller also a built-in red LED mounted on the board close to the USB cable input."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Connect an LED to the ESP8266 Microcontroller as shown below. \n",
+    "Connect an LED (any color) to the ESP8266 Microcontroller as shown below. \n",
     "\n",
     " * Connect Pin 13 to the LONG leg of the LED (red wire)\n",
     " * Connect GND to the SHORT leg of the LED to through a 330 $\\Omega$ resistor (black wire).\n",
@@ -168,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the PuTTY serial window, test to see if the MicroPython REPL is still functioning with a basic _Hello World_ program.\n",
+    "After the LED is hooked up, test to see if the MicroPython REPL is still functioning with a basic _Hello World_ program. Type the command below into the PuTTY window.\n",
     "\n",
     "```text\n",
     ">>> print(\"Hello World\")\n",
@@ -189,7 +189,7 @@
     "1\n",
     "```\n",
     "\n",
-    "To assign a value to Pin 0, the ```Pin``` object must be created as an _output_ pin. An output pin is a pin where a program or user determines the pin output. An input pin is a pin set up to read input, like the input from a sensor. In this case we want to assign Pin 0 as an output pin.\n",
+    "To assign a value to Pin 0, the ```Pin``` object must be created as an _output_ pin. An output pin is a pin where a program or user determines the pin output. An input pin is a pin set up to read input, like the input from a sensor. In this case, we want to assign Pin 0 as an output pin.\n",
     "\n",
     "```text\n",
     ">>> pin = machine.Pin(0, machine.Pin.OUT)\n",
@@ -213,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can write a for loop at the MicroPython REPL to blink the LED on and off. In order to do this, we need to import the **machine** module and the **time** module."
+    "Now we can write a for loop at the MicroPython REPL to blink the LED on and off. In order to blink the LED on and off with a for loop, we need to import the **machine** module and the **time** module."
    ]
   },
   {
@@ -245,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section, you will learn how to connect a potentiometer sensor to the ESP8266 Microcontroller and use the MicroPython REPL to record the potentiometer level."
+    "In this section, you will learn how to connect a potentiometer sensor to the ESP8266 Microcontroller and use MicroPython to record the potentiometer level."
    ]
   },
   {
@@ -254,7 +254,7 @@
    "source": [
     "### Connect the potentiometer to the ESP8266 Microcontroller\n",
     "\n",
-    "Connect the potentiometer to the ESP8266 Microcontroller as shown below. Connect Pin 13 to the LONG leg of the LED (red wire) and connect the SHORT leg of the LED to ground through a 330 $\\Omega$ resistor (black wire).\n",
+    "Connect the potentiometer to the ESP8266 Microcontroller as shown below. Connect Pin 13 to the LONG leg of the LED (red wire) and connect the SHORT leg of the LED to ground through a 330 $\\Omega$ resistor (black wire). Connect the center wire of the potentiometer (yellow wire) to Pin 0. Connect one outside wire of the potentiometer (red wire) to 3V and the other outside wire of the potentiometer (black wire) to ground.\n",
     "\n",
     "![fritzing diagram ESP8266 LED](images/feather_huzzah_potentiometer_bb.png)"
    ]
@@ -263,14 +263,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run code at the MicroPython REPL to measure the light level"
+    "### Run code at the MicroPython REPL to measure the potentiometer level"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the PuTTY serial window, import the ```machine``` module and then create an instance of the ```machine.I2C``` class with the ```scl``` and ```sda``` parameters set as ```scl=machine.Pin(5)``` and ```sda=machine.Pin(4)```.  Then create an empty ```bytearray``` which will store the data coming in from the MCP9808 temperature sensor. As strings in Micropython are UTF-8 encoded by default (like in Python 3), a _bytearray_ needs to be used to read the raw output from the MCP9808 chip registers. The command ```i2c.readfrom_mem_into()``` method brings in the data from the sensor and saves it to the ```byte_data``` variable. The arguments inside the ```i2c.readfrom_mem_into()``` method ```24``` and ```5``` correspond to the I2C memory address and registry address of the temperature data stored in the MCP9808 temperature sensor.   \n",
+    "In the PuTTY serial window, import the ```machine``` module and the ```time``` module. Create a new ```pin``` object with ```machine.Pin()```. Supply pin number ```0``` and specifiy the pin as an input pin using ```machine.Pin.IN```. Then use a for loop to output the pin's value with the command ```pin.value()```. The command ```time.sleep(0.5)``` pauses the for loop for half a second before the next pin value is measured. MicroPython auto-indents code when you start a for loop. Use backspace to back out of the indentation when you are done with the loop code. When you backspace back to the originol indentation level, you can press [Enter] and run the loop.   \n",
     "\n",
     "```text\n",
     ">>> import machine\n",
@@ -291,15 +291,22 @@
    "source": [
     "## Deliverables\n",
     "\n",
-    "Before closing the PuTTY window, run the command ```history```. Copy the ouput from the window into a text file. Save the file as ```lab8.txt```. Upload the ```lab8.tct``` file to D2L."
+    "Before closing the PuTTY window, run the command ```history```. Copy the ouput from the window into a text file. Save the file as ```lab8.txt```. Upload the ```lab8.txt``` file to D2L."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### _By P. Kazarinoff, Portland Community College, 2018_"
+    "#### _By P. Kazarinoff, Portland Community College, 2018-2019_"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -318,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
