edits to plotting lab

--- a/ENGR114-Labs/Lab04-Plotting_Weather_Data/ENGR114-Lab04-Plotting_Weather_Data.ipynb
+++ b/ENGR114-Labs/Lab04-Plotting_Weather_Data/ENGR114-Lab04-Plotting_Weather_Data.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Prelab\n",
     "\n",
-    "Before starting you start coding, read through this entire document, then create a pseudocode outline of what your program will do.   Use separate the markdown sections that describe what each of sections of code will do. Describe what type of plot you will build and what the plots will look like in your pseudocode."
+    "Before you start coding, read through this entire document, then create a pseudocode outline of what your program will do. Pseudocode is read by users, not read by the Python interpreter.  Use separate the markdown sections that describe what each of section of code will do. For example, you could have a section for imports and a section to bring the data into the Jupyter notebook. Describe what type of plots you will build and, what the plots will look like in your pseudocode."
    ]
   },
   {
@@ -22,16 +22,16 @@
    "source": [
     "## Lab\n",
     "\n",
-    "Download the Excel spreadsheet file titled ```govt_camp_2013_01_to_2016_03.xlsx``` and save it to your preferred working directory. The directory where the Excel data file is placed needs to be the same directory you build the Jupyter notebook in.  The Excel file contains daily weather data points gathered from the USGS weather station in Government Camp, OR from Jan 1, 2009 to Mar 31, 2016.  The measurements and their units are given in the column headers (first row) of the spreadsheet. \n",
+    "Download the Excel spreadsheet file titled ```govt_camp_2013_01_to_2016_03.xlsx``` and save it to your preferred working directory. The directory where the Excel .xlsx file is placed needs to be the same directory you build your Jupyter notebook in.  The Excel file contains daily weather data points gathered from the USGS weather station in Government Camp, OR from Jan 1, 2009 to Mar 31, 2016.  The weather measurements and their units are given in the column headers (first row) of the Excel spreadsheet. \n",
     "\n",
-    "At the start of your lab, include a header in a Jupyter notebook markdown cell that contains the lab name, your name, the course, quarter and date. Below the header import the libraries you will use in the rest of the lab. Note that NumPy is imported as ```np```, Pandas is imported as ```pd``` and Matplotlib's pyplot library is imported as ```plt```. The three import aliases ```np```, ```pd```, and ```plt``` are commonly used in Python. The line ```%matplotlib inline``` is a Jupyter notebook command, not valid Python code.  ```%matplotlib inline``` results in Matplotlib plots which are displayed directly in a Jupyter notebook, instead of popping out as a seperate window. If you build a ```.py``` file instead of a Jupyter notebook ```.ipynb``` file, leave out ```%matplotlib inline```. \n",
+    "At the start of your lab, include a header in a Jupyter notebook markdown cell that contains the lab name, your name, the course, quarter and date. Below the header, import the libraries you will use in the rest of the lab. Note that NumPy is imported as ```np```, Pandas is imported as ```pd``` and Matplotlib's pyplot library is imported as ```plt```. The three import aliases ```np```, ```pd```, and ```plt``` are commonly used in Python. The line ```%matplotlib inline``` is a Jupyter notebook magic command, not valid Python code.  ```%matplotlib inline``` results in Matplotlib plots which are displayed directly in Jupyter notebook output cells, instead of Matplotlib plots popping out as a separate windows. If you build a ```.py``` file instead of a Jupyter notebook ```.ipynb``` file, leave out ```%matplotlib inline```. \n",
     "\n",
     "The Jupyter notebook code cell below shows the imports described above."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,14 +45,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, use Panda's ```pd.read_csv()``` function to read the ```.xlsx``` data file into a Pandas _dataframe_ called ```df```. The Panda's method ```df.head()``` shows the first couple rows of the dataframe ```df```.\n",
+    "Next, use Panda's ```pd.read_csv()``` function to read the ```.xlsx``` data file into a Pandas _dataframe_ called ```df```. The Panda's ```df.head()``` method shows the first couple rows of the dataframe ```df```.\n",
     "\n",
-    "The code below saves the excel sheet to the variable ```df``` and show's the first couple rows of ```df```."
+    "The code below saves the Excel data file to the variable ```df``` and shows the first couple rows of ```df```."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "4             37             28  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The third column of the Pandas dataframe represents the date on which the observations in that row were recorded.  For example, the first row of data (index 0) contains a value of ```20130101``` in the ```DATE``` column.  The value ```20130101``` means January  01, 2013. The date format is ```YEAR-MONOTH-DAY```.\n",
+    "The third column of the Pandas dataframe represents the date on which the observations in that row were recorded.  For example, the first row of data (index 0) contains a value of ```20130101``` in the ```DATE``` column.  The value ```20130101``` means January  01, 2013. The date format is ```YEAR-MONTH-DAY```.\n",
     "\n",
     "Remove the first two columns of the dataframe ```df``` so that the resulting first column in the dataframe is the ```DATE``` column. You can use ```df.head()``` to view the dataframe after the two columns are removed.\n",
     "\n",
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the resulting dataframe, first column now represents the date on which the observations in that row were measured.  For example, row 48 of the dataframe contains a value of ```20130219```.  This means February 19, 2013.  Replace column 1 of the dataframe ```df``` (the ```DATE``` column) with 3 columns containing the ```year``` in the first column, the ```month``` in the second column, and the ```day``` of the month in the third column.  When you are finished, your dataframe ```df``` should be ```1186 x 8``` and the dataframe's first row should have the following values:\n",
+    "In the resulting dataframe, first column now represents the date on which the observations in that row were measured.  For example, row 48 of the dataframe contains a value of ```20130219```.  This means February 19, 2013.  Replace column 1 of the dataframe ```df``` (the ```DATE``` column) with 3 columns containing the ```year``` in the first column, the ```month``` in the second column, and the ```day``` in the third column.  When you are finished adding (and deleting the ```DATE```) columns, your dataframe ```df``` should be ```1186 x 8``` and the dataframe's first row should have the following values:\n",
     "\n",
     "```text\n",
     "2013    1     1    0.00    44    0.0    29    12 \n",
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "4                 0.0             37             28  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,14 +356,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The last step of data cleaning is to convert the resulting dataframe ```df``` into a NumPy array ```wd```. Once the data is in a NumPy array, you will be able to index and slice it using regular NumPy operations. Print the NumPy array with the command ```print(wd)``` and see how the year, month and day have been converted to floats. Don't forget what the columns correspond to.\n",
+    "The last step of data cleaning is to convert the resulting dataframe ```df``` into a NumPy array ```wd```. Once the data is in a NumPy array, you will be able to index and slice the data using regular NumPy operations. Print the NumPy array with the command ```print(wd)``` and see how the year, month and day have been converted to floats. Don't forget what the columns correspond to.\n",
     "\n",
     "The code cell below shows how to convert the dataframe ```df``` into a NumPy array called ```wd```. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
     "\n",
     "Use NumPy's ```np.where()``` function to save the precipitation data (number of inches only) exclusively for days in the year 2013 to a NumPy array called ```precip_2013```. Use the ```plt.subplots()``` method to plot the ```precip_2013``` data in the first subplot. \n",
     "\n",
-    "Complete the same indexing operation on the precipitation data for 2014, then 2015, then 2016. Create a subplot for each year. The plot for 2016 should include an x-axis label and have the same axis limits as the x-axis limits in the other subplots.\n",
+    "Complete the same type of indexing operation on the precipitation data for 2014, then 2015, then 2016. Create a subplot for each year. The plot for 2016 should include an x-axis label and have the same axis limits as the x-axis limits in the other subplots.\n",
     "\n",
     "The resulting figure which contains four subplots, one subplot for each year, should look something like below: \n",
     "\n",
@@ -434,15 +434,17 @@
    "source": [
     "### y-y plot\n",
     "\n",
-    "Use boolean masking to save some of the snow depth data into a NumPy array called ```winter13_14_sd```.  Remember which column headers correspond to which measurement in the dataframe ```df```.  Refer to the dataframe or Excel file, if need be, to see which column corresponds snow depth.  Your snow depth data set should only include measurements from the first day of November 2013 to the last day of February 2014.  Slicing or indexing out snow depth data in this date range is probably be the most difficult part of this lab.\n",
+    "The next plot you will build is a y-y plot. A y-y plot has two different y-axes. Each set or sets of data corresponds to one of the separate y-axes. Y-y plots are useful when two types of data contain the same x-values (like time) but very different scales of y-values (like snow fall and snow depth).\n",
+    "\n",
+    "Use boolean masking to save some of the **snow depth** data into a NumPy array called ```winter13_14_sd```.  Remember which column headers correspond to which measurement in the dataframe ```df```.  Refer to the dataframe or Excel file, if need be, to see which column corresponds snow depth.  Your snow depth data set should only include measurements from the first day of November 2013 to the last day of February 2014.  Slicing or indexing out snow depth data in this date range is probably be the most difficult part of the lab.\n",
     "\n",
     " > Hint: Create multiple boolean masks and then combine the boolean masks with NumPy's ```np.logical_and()``` and ```np.logical_or()``` functions. These two NumPy functions operate like Python's ```and```, ```or``` keywords, but can be applied to arrays of boolean values.\n",
     "\n",
-    "Index out the same days' (Nov 1, 2013 to Fab 27, 2014) snow fall data and save the snow fall data in this date range to a NumPy array called ```winter13_14_sf```.\n",
+    "Index out the same days' (Nov 1, 2013 to Fab 27, 2014) **snow fall** data and save the snow fall data in this date range to a NumPy array called ```winter13_14_sf```.\n",
     "\n",
-    "Use Matplotlib's ```ax2 = ax1.twinx()``` method to plot both sets of data on the same graph (same x-axis), but with different y-axes.  \n",
+    "Use Matplotlib's ```ax2 = ax1.twinx()``` method to plot both sets of data on the same plot (same x-axis), but with different y-axes.  \n",
     "\n",
-    "Notice the figure has a different vertical axis on the left compared to the vertical axis on the right.  Let Matplotlib choose your axis limits and line colors.  Be sure to include the grid lines, x-axis label, y-axis labels, title, and legend as seen in the figure below.\n",
+    "Notice the figure has a different vertical axis on the left compared to the vertical axis on the right.  Let Matplotlib choose your axis limits and line colors.  Be sure to include the grid lines, x-axis label, y-axis labels, title, and legend as seen in the figure below. It is tricky to include both entries in the legend. Do your best, but don't waste too much time configuring the legend.\n",
     "\n",
     "![Plot 4: y-y Plot](images/yyplot.png)"
    ]
@@ -453,7 +455,7 @@
    "source": [
     "### Histogram\n",
     "\n",
-    "The final plot to create for this lab is a histogram. A histogram is a statistical plot that shows the number of values that fall into different value ranges, called bins. Use your ```winter13_14_sf``` NumPy array to build the histogram. Include 10 bins in the histogram. Make sure to match all of the labels and title from the example histogram below.\n",
+    "The final plot to create in this lab is a histogram. A histogram is a statistical plot that shows the number of values that fall into different value ranges, called bins. Use your ```winter13_14_sf``` NumPy array to build the histogram. Include 10 bins in the histogram. Make sure to match all of the labels and title from the example histogram below.\n",
     "\n",
     "![Plot 5: Histogram](images/plot5.png)"
    ]
@@ -476,7 +478,7 @@
     " \n",
     " * A histogram of snow fall\n",
     "\n",
-    "Make sure to run all the cells in the Jupyter notebook before submitting the file. Upload your **_lab4.ipynb_** file to the Lab 4 drop box in D2L. "
+    "Make sure to run all the cells in your Jupyter notebook before submitting the file. Upload your **_lab4.ipynb_** file to the Lab 4 drop box in D2L. "
    ]
   },
   {
@@ -510,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
