--- a/ENGR114-Labs/Lab04-Plotting_Weather_Data/ENGR114-Lab04-Plotting_Weather_Data.tex
+++ b/ENGR114-Labs/Lab04-Plotting_Weather_Data/ENGR114-Lab04-Plotting_Weather_Data.tex
@@ -359,41 +359,44 @@ Data}\label{lab-04---plotting-weather-data}}
     \hypertarget{prelab}{%
 \subsection{Prelab}\label{prelab}}
 
-Before starting your Jupyter notebook, read through this entire
-document, then create a pseudocode outline of what your program will do.
-Use separate the markdown sections that describe what each of sections
-of code will do. Describe what the plots will look like in the markdown
-blocks.
+Before you start coding, read through this entire document, then create
+a pseudocode outline of what your program will do. Pseudocode is read by
+users, not read by the Python interpreter. Use separate the markdown
+sections that describe what each of section of code will do. For
+example, you could have a section for imports and a section to bring the
+data into the Jupyter notebook. Describe what type of plots you will
+build and, what the plots will look like in your pseudocode.
 
     \hypertarget{lab}{%
 \subsection{Lab}\label{lab}}
 
-Download the Excel data file titled
-\texttt{govt\_camp\_2013\_01\_to\_2016\_03.xlsx{]}} and save it to your
-preferred working directory. The directory where the Excel data file is
-placed needs to be the same directory you build the Jupyter notebook in.
-The Excel file contains daily weather data points gathered from the USGS
-weather station in Government Camp, OR from Jan 1, 2009 to Mar 31, 2016.
-The measurements and their units are given in the column headers (first
-row) of the spreadsheet.
+Download the Excel spreadsheet file titled
+\texttt{govt\_camp\_2013\_01\_to\_2016\_03.xlsx} and save it to your
+preferred working directory. The directory where the Excel .xlsx file is
+placed needs to be the same directory you build your Jupyter notebook
+in. The Excel file contains daily weather data points gathered from the
+USGS weather station in Government Camp, OR from Jan 1, 2009 to Mar 31,
+2016. The weather measurements and their units are given in the column
+headers (first row) of the Excel spreadsheet.
 
 At the start of your lab, include a header in a Jupyter notebook
 markdown cell that contains the lab name, your name, the course, quarter
-and data. Below the header import the libraries you will use in the rest
-of the lab. Note that NumPy is imported as \texttt{np}, Pandas is
+and date. Below the header, import the libraries you will use in the
+rest of the lab. Note that NumPy is imported as \texttt{np}, Pandas is
 imported as \texttt{pd} and Matplotlib's pyplot library is imported as
 \texttt{plt}. The three import aliases \texttt{np}, \texttt{pd}, and
 \texttt{plt} are commonly used in Python. The line
-\texttt{\%matplotlib\ inline} is a Jupyter notebook command to cause
-Matplotlib plots to disply directly in a Jupyter notebook. If you are
-building a \texttt{.py} file instead of a Jupyter notebook
-\texttt{.ipynb} file, leave out \texttt{\%matplotlib\ inline} as this
-line is not valid Python code.
+\texttt{\%matplotlib\ inline} is a Jupyter notebook magic command, not
+valid Python code. \texttt{\%matplotlib\ inline} results in Matplotlib
+plots which are displayed directly in Jupyter notebook output cells,
+instead of Matplotlib plots popping out as a separate windows. If you
+build a \texttt{.py} file instead of a Jupyter notebook \texttt{.ipynb}
+file, leave out \texttt{\%matplotlib\ inline}.
 
 The Jupyter notebook code cell below shows the imports described above.
 
     \begin{Verbatim}[commandchars=\\\{\}]
-{\color{incolor}In [{\color{incolor}1}]:} \PY{k+kn}{import} \PY{n+nn}{numpy} \PY{k}{as} \PY{n+nn}{np}
+{\color{incolor}In [{\color{incolor}6}]:} \PY{k+kn}{import} \PY{n+nn}{numpy} \PY{k}{as} \PY{n+nn}{np}
         \PY{k+kn}{import} \PY{n+nn}{pandas} \PY{k}{as} \PY{n+nn}{pd}
         \PY{k+kn}{import} \PY{n+nn}{matplotlib}\PY{n+nn}{.}\PY{n+nn}{pyplot} \PY{k}{as} \PY{n+nn}{plt}
         \PY{o}{\PYZpc{}}\PY{k}{matplotlib} inline
@@ -402,20 +405,20 @@ The Jupyter notebook code cell below shows the imports described above.
 
     Next, use Panda's \texttt{pd.read\_csv()} function to read the
 \texttt{.xlsx} data file into a Pandas \emph{dataframe} called
-\texttt{df}. The Panda's method \texttt{df.head()} will show the first
+\texttt{df}. The Panda's \texttt{df.head()} method shows the first
 couple rows of the dataframe \texttt{df}.
-\newpage
-The code below saves the excel sheet to the variable \texttt{df} and
-show's the first couple rows of \texttt{df}.
+
+The code below saves the Excel data file to the variable \texttt{df} and
+shows the first couple rows of \texttt{df}.
 
     \begin{Verbatim}[commandchars=\\\{\}]
-{\color{incolor}In [{\color{incolor}2}]:} \PY{n}{df} \PY{o}{=} \PY{n}{pd}\PY{o}{.}\PY{n}{read\PYZus{}excel}\PY{p}{(}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{govt\PYZus{}camp\PYZus{}2013\PYZus{}01\PYZus{}to\PYZus{}2016\PYZus{}03.xlsx}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}
+{\color{incolor}In [{\color{incolor}7}]:} \PY{n}{df} \PY{o}{=} \PY{n}{pd}\PY{o}{.}\PY{n}{read\PYZus{}excel}\PY{p}{(}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{govt\PYZus{}camp\PYZus{}2013\PYZus{}01\PYZus{}to\PYZus{}2016\PYZus{}03.xlsx}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}
         \PY{n}{df}\PY{o}{.}\PY{n}{head}\PY{p}{(}\PY{p}{)}
 \end{Verbatim}
 
 
 \begin{Verbatim}[commandchars=\\\{\}]
-{\color{outcolor}Out[{\color{outcolor}2}]:}              STATION           STATION\_NAME      DATE  \textbackslash{}
+{\color{outcolor}Out[{\color{outcolor}7}]:}              STATION           STATION\_NAME      DATE  \textbackslash{}
         0  GHCND:USC00353402  GOVERNMENT CAMP OR US  20130101   
         1  GHCND:USC00353402  GOVERNMENT CAMP OR US  20130102   
         2  GHCND:USC00353402  GOVERNMENT CAMP OR US  20130103   
@@ -441,7 +444,7 @@ show's the first couple rows of \texttt{df}.
 the observations in that row were recorded. For example, the first row
 of data (index 0) contains a value of \texttt{20130101} in the
 \texttt{DATE} column. The value \texttt{20130101} means January 01,
-2013.
+2013. The date format is \texttt{YEAR-MONTH-DAY}.
 
 Remove the first two columns of the dataframe \texttt{df} so that the
 resulting first column in the dataframe is the \texttt{DATE} column. You
@@ -452,7 +455,7 @@ The code below drops the \texttt{STATION} and \texttt{STATION\_NAME}
 columns from dataframe \texttt{df}.
 
     \begin{Verbatim}[commandchars=\\\{\}]
-{\color{incolor}In [{\color{incolor}3}]:} \PY{n}{df}\PY{o}{.}\PY{n}{drop}\PY{p}{(}\PY{p}{[}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{STATION}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{STATION\PYZus{}NAME}\PY{l+s+s1}{\PYZsq{}}\PY{p}{]}\PY{p}{,} \PY{n}{axis}\PY{o}{=}\PY{l+m+mi}{1}\PY{p}{,} \PY{n}{inplace}\PY{o}{=}\PY{k+kc}{True}\PY{p}{)}
+{\color{incolor}In [{\color{incolor}8}]:} \PY{n}{df}\PY{o}{.}\PY{n}{drop}\PY{p}{(}\PY{p}{[}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{STATION}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{STATION\PYZus{}NAME}\PY{l+s+s1}{\PYZsq{}}\PY{p}{]}\PY{p}{,} \PY{n}{axis}\PY{o}{=}\PY{l+m+mi}{1}\PY{p}{,} \PY{n}{inplace}\PY{o}{=}\PY{k+kc}{True}\PY{p}{)}
 \end{Verbatim}
 
 
@@ -462,20 +465,21 @@ the dataframe contains a value of \texttt{20130219}. This means February
 19, 2013. Replace column 1 of the dataframe \texttt{df} (the
 \texttt{DATE} column) with 3 columns containing the \texttt{year} in the
 first column, the \texttt{month} in the second column, and the
-\texttt{day} of the month in the third column. When you are finished,
-your dataframe \texttt{df} should be \texttt{1186\ x\ 8} and it's first
-row should have the following values:
+\texttt{day} in the third column. When you are finished adding (and
+deleting the \texttt{DATE}) columns, your dataframe \texttt{df} should
+be \texttt{1186\ x\ 8} and the dataframe's first row should have the
+following values:
 
 \begin{verbatim}
 2013    1     1    0.00    44    0.0    29    12 
 \end{verbatim}
-\newpage
+
 The lines in the code cell below completes these operations. If you
 rerun the code cell, make sure to start at the beginning of the
 notebook.
 
     \begin{Verbatim}[commandchars=\\\{\}]
-{\color{incolor}In [{\color{incolor}4}]:} \PY{n}{df}\PY{p}{[}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{DATE}\PY{l+s+s1}{\PYZsq{}}\PY{p}{]} \PY{o}{=} \PY{n}{pd}\PY{o}{.}\PY{n}{to\PYZus{}datetime}\PY{p}{(}\PY{n}{df}\PY{p}{[}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{DATE}\PY{l+s+s1}{\PYZsq{}}\PY{p}{]}\PY{p}{,} \PY{n+nb}{format}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZpc{}}\PY{l+s+s1}{Y}\PY{l+s+s1}{\PYZpc{}}\PY{l+s+s1}{m}\PY{l+s+si}{\PYZpc{}d}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}
+{\color{incolor}In [{\color{incolor}9}]:} \PY{n}{df}\PY{p}{[}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{DATE}\PY{l+s+s1}{\PYZsq{}}\PY{p}{]} \PY{o}{=} \PY{n}{pd}\PY{o}{.}\PY{n}{to\PYZus{}datetime}\PY{p}{(}\PY{n}{df}\PY{p}{[}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{DATE}\PY{l+s+s1}{\PYZsq{}}\PY{p}{]}\PY{p}{,} \PY{n+nb}{format}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{\PYZpc{}}\PY{l+s+s1}{Y}\PY{l+s+s1}{\PYZpc{}}\PY{l+s+s1}{m}\PY{l+s+si}{\PYZpc{}d}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}
         \PY{n}{df}\PY{o}{.}\PY{n}{insert}\PY{p}{(}\PY{l+m+mi}{0}\PY{p}{,} \PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{year}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PY{n}{pd}\PY{o}{.}\PY{n}{DatetimeIndex}\PY{p}{(}\PY{n}{df}\PY{p}{[}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{DATE}\PY{l+s+s1}{\PYZsq{}}\PY{p}{]}\PY{p}{)}\PY{o}{.}\PY{n}{year}\PY{p}{)}
         \PY{n}{df}\PY{o}{.}\PY{n}{insert}\PY{p}{(}\PY{l+m+mi}{1}\PY{p}{,} \PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{month}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PY{n}{pd}\PY{o}{.}\PY{n}{DatetimeIndex}\PY{p}{(}\PY{n}{df}\PY{p}{[}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{DATE}\PY{l+s+s1}{\PYZsq{}}\PY{p}{]}\PY{p}{)}\PY{o}{.}\PY{n}{month}\PY{p}{)}
         \PY{n}{df}\PY{o}{.}\PY{n}{insert}\PY{p}{(}\PY{l+m+mi}{2}\PY{p}{,} \PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{day}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PY{n}{pd}\PY{o}{.}\PY{n}{DatetimeIndex}\PY{p}{(}\PY{n}{df}\PY{p}{[}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{DATE}\PY{l+s+s1}{\PYZsq{}}\PY{p}{]}\PY{p}{)}\PY{o}{.}\PY{n}{day}\PY{p}{)}
@@ -491,7 +495,7 @@ notebook.
     \end{Verbatim}
 
 \begin{Verbatim}[commandchars=\\\{\}]
-{\color{outcolor}Out[{\color{outcolor}4}]:}    year  month  day  Precipitation\textbackslash{}n(inches)  Snow Depth\textbackslash{}n(inches)  \textbackslash{}
+{\color{outcolor}Out[{\color{outcolor}9}]:}    year  month  day  Precipitation\textbackslash{}n(inches)  Snow Depth\textbackslash{}n(inches)  \textbackslash{}
         0  2013      1    1                     0.00                    44   
         1  2013      1    2                     0.01                    42   
         2  2013      1    3                     0.00                    42   
@@ -508,17 +512,17 @@ notebook.
             
     The last step of data cleaning is to convert the resulting dataframe
 \texttt{df} into a NumPy array \texttt{wd}. Once the data is in a NumPy
-array, you will be able to index and slice it using regular NumPy
+array, you will be able to index and slice the data using regular NumPy
 operations. Print the NumPy array with the command \texttt{print(wd)}
 and see how the year, month and day have been converted to floats. Don't
-forget what the columns
+forget what the columns correspond to.
 
 The code cell below shows how to convert the dataframe \texttt{df} into
 a NumPy array called \texttt{wd}.
 
     \begin{Verbatim}[commandchars=\\\{\}]
-{\color{incolor}In [{\color{incolor}5}]:} \PY{n}{wd} \PY{o}{=} \PY{n}{np}\PY{o}{.}\PY{n}{array}\PY{p}{(}\PY{n}{df}\PY{p}{)}
-        \PY{n+nb}{print}\PY{p}{(}\PY{n}{wd}\PY{p}{)}
+{\color{incolor}In [{\color{incolor}10}]:} \PY{n}{wd} \PY{o}{=} \PY{n}{np}\PY{o}{.}\PY{n}{array}\PY{p}{(}\PY{n}{df}\PY{p}{)}
+         \PY{n+nb}{print}\PY{p}{(}\PY{n}{wd}\PY{p}{)}
 \end{Verbatim}
 
 
@@ -533,6 +537,7 @@ a NumPy array called \texttt{wd}.
 
     \end{Verbatim}
 \newpage
+
     \hypertarget{create-a-line-plot}{%
 \subsubsection{Create a line plot}\label{create-a-line-plot}}
 
@@ -540,8 +545,9 @@ Once the data is cleaned up, create a line plot with Matplotlib of
 precipitation in inches vs.~time (in days since Jan 01, 2013). Include
 an x-axis label, a y-axis label, and a title on your plot. Look back at
 the column headers in the dataframe \texttt{df} to determine which
-column corresponds to Precipitation (inches). Use indexing to pull out
-all of the values from the precipitation column to build your plot.
+column corresponds to \texttt{Precipitation\ (inches)}. Use indexing to
+pull out all of the values from the precipitation column to build your
+plot.
 
 The resulting plot should look something like the plot below:
 
@@ -550,6 +556,7 @@ The resulting plot should look something like the plot below:
 \includegraphics{images/plot1.png}
 \caption{Plot 1: Line Plot}
 \end{figure}
+
 \newpage
     \hypertarget{create-a-line-plot-with-two-lines}{%
 \subsubsection{Create a line plot with two
@@ -558,10 +565,10 @@ lines}\label{create-a-line-plot-with-two-lines}}
 Next, create a Matplotlib line plot that shows the maximum and minimum
 temperatures in 2013 on two lines. Look back at the datafrome
 \texttt{df} to determine which columns correspond to the maximum and
-minimum temperatures recorded on each day. The maximum temp should be a
-red line and the minimum temp should be a blue line. Include a legend
-that shows \texttt{Max\ Temp} and \texttt{Min\ Temp}. Include axis
-labels and a title on the plot.
+minimum temperatures recorded each day. The maximum temp should be a red
+line and the minimum temp should be a blue line. Include a legend that
+shows \texttt{Max\ Temp} and \texttt{Min\ Temp}. Include axis labels and
+a title on the plot.
 
 The resulting plot should look something like the plot below:
 
@@ -570,7 +577,7 @@ The resulting plot should look something like the plot below:
 \includegraphics{images/plot2.png}
 \caption{Plot 2: Multi-line Plot}
 \end{figure}
-\newpage
+
     \hypertarget{create-4-subplots}{%
 \subsubsection{Create 4 subplots}\label{create-4-subplots}}
 
@@ -588,66 +595,83 @@ Use NumPy's \texttt{np.where()} function to save the precipitation data
 array called \texttt{precip\_2013}. Use the \texttt{plt.subplots()}
 method to plot the \texttt{precip\_2013} data in the first subplot.
 
-Do the same for the precipitation data for 2014, then 2015, then 2016
-and create a subplot for each. The plot for 2016 should include an
-x-axis label and have the same axis limits as the x-axis limits as the
-other subplots.
+Complete the same type of indexing operation on the precipitation data
+for 2014, then 2015, then 2016. Create a subplot for each year. The plot
+for 2016 should include an x-axis label and have the same axis limits as
+the x-axis limits in the other subplots.
 
 The resulting figure which contains four subplots, one subplot for each
 year, should look something like below:
 
-\begin{figure}[h!]
+\begin{figure}
 \centering
 \includegraphics{images/plot3.png}
 \caption{Plot 3: Four Subplots}
 \end{figure}
+
 \newpage
+
     \hypertarget{y-y-plot}{%
 \subsubsection{y-y plot}\label{y-y-plot}}
 
-Use NumPy's \texttt{np.where()} function to save some of the snow depth
-data into a NumPy array called \texttt{winter16\_sd}. Remember which
-column headers correspond to which measurement in the dataframe
-\texttt{df}. Refer to that file, if need be, to see which column
-corresponds snow depth. Your snow depth data set should only include the
-data from the first day of November 2013 to the last day of February
-2014. Indexing out snow depth data in this date range will probably be
-the most difficult part of the lab.
+The next plot you will build is a y-y plot. A y-y plot has two different
+y-axes. Each set or sets of data corresponds to one of the separate
+y-axes. Y-y plots are useful when two types of data contain the same
+x-values (like time) but very different scales of y-values (like snow
+fall and snow depth).
 
-Index out the same days' (Nov 1, 2013 to Fab 27, 2014) snow fall data
-and save the snow fall data in this date range to a NumPy array called
-\texttt{winter13\_14\_sf}.
+Use boolean masking to save some of the \textbf{snow depth} data into a
+NumPy array called \texttt{winter13\_14\_sd}. Remember which column
+headers correspond to which measurement in the dataframe \texttt{df}.
+Refer to the dataframe or Excel file, if need be, to see which column
+corresponds snow depth. Your snow depth data set should only include
+measurements from the first day of November 2013 to the last day of
+February 2014. Slicing or indexing out snow depth data in this date
+range is probably be the most difficult part of the lab.
 
-Use the \texttt{plt.plotyy()} function to plot both sets of data on the
-same graph, but with different y-axes.
+\begin{quote}
+Hint: Create multiple boolean masks and then combine the boolean masks
+with NumPy's \texttt{np.logical\_and()} and \texttt{np.logical\_or()}
+functions. These two NumPy functions operate like Python's \texttt{and},
+\texttt{or} keywords, but can be applied to arrays of boolean values.
+\end{quote}
+
+Index out the same days' (Nov 1, 2013 to Fab 27, 2014) \textbf{snow
+fall} data and save the snow fall data in this date range to a NumPy
+array called \texttt{winter13\_14\_sf}.
+
+Use Matplotlib's \texttt{ax2\ =\ ax1.twinx()} method to plot both sets
+of data on the same plot (same x-axis), but with different y-axes.
 
 Notice the figure has a different vertical axis on the left compared to
 the vertical axis on the right. Let Matplotlib choose your axis limits
 and line colors. Be sure to include the grid lines, x-axis label, y-axis
-labels, title, and legend as seen in the figure below.
+labels, title, and legend as seen in the figure below. It is tricky to
+include both entries in the legend. Do your best, but don't waste too
+much time configuring the legend.
 
 \begin{figure}[h!]
 \centering
-\includegraphics{images/plot4.png}
+\includegraphics{images/yyplot.png}
 \caption{Plot 4: y-y Plot}
 \end{figure}
 \newpage
     \hypertarget{histogram}{%
 \subsubsection{Histogram}\label{histogram}}
 
-The last plot to create for this lab is a histogram. A histogram is a
-statistical plot that shows the frequency of values according to a
-number of different ranges. Use your \texttt{winter13\_14\_sf} NumPy
-array to build the histogram. Include 10 bins in the histogram. Make
-sure to match all of the labels and title from the example histogram
-below.
+The final plot to create in this lab is a histogram. A histogram is a
+statistical plot that shows the number of values that fall into
+different value ranges, called bins. Use your \texttt{winter13\_14\_sf}
+NumPy array to build the histogram. Include 10 bins in the histogram.
+Make sure to match all of the labels and title from the example
+histogram below.
 
 \begin{figure}[h!]
 \centering
 \includegraphics{images/plot5.png}
 \caption{Plot 5: Histogram}
 \end{figure}
-\newpage
+
     \hypertarget{deliverables}{%
 \subsection{Deliverables}\label{deliverables}}
 
@@ -672,9 +696,14 @@ should be:
   A histogram of snow fall
 \end{itemize}
 
-Make sure to run all the cells in the Jupyter notebook before submitting
-the file. Upload your \textbf{\emph{lab4.ipynb}} file to the Lab 4 drop
-box in D2L.
+Make sure to run all the cells in your Jupyter notebook before
+submitting the file. Upload your \textbf{\emph{lab4.ipynb}} file to the
+Lab 4 drop box in D2L.
+
+    \hypertarget{by-d.-kruger-modified-by-p.-kazarinoff-portland-community-college-2019}{%
+\paragraph{\texorpdfstring{\emph{By D. Kruger, modified by P.
+Kazarinoff, Portland Community College,
+2019}}{By D. Kruger, modified by P. Kazarinoff, Portland Community College, 2019}}\label{by-d.-kruger-modified-by-p.-kazarinoff-portland-community-college-2019}}
 
 
     % Add a bibliography block to the postdoc
