edits to webAPI lab and image select lab

--- a/ENGR114-Labs/Lab05-WebAPIs/ENGR114-Lab05-WebAPIs.ipynb
+++ b/ENGR114-Labs/Lab05-WebAPIs/ENGR114-Lab05-WebAPIs.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "## Lab\n",
     "\n",
-    "For this group lab assignment, your group will use Python to interact with a web API to dynamically collect weather information from a Natick, MA weather station and display it to the user. The program will ask the user if they want to plot temperature, humidity, rainfall or pressure. Then the program will ask the user for the number of data points they want to plot. Finally, the program will produce a plot of the selected weather data from the Natick, MA weather station. "
+    "For this group lab assignment, your group will use Python to interact with a web API to dynamically collect weather information from a Natick, MA weather station and display the weather data to the user. The program will ask the user if they want to plot temperature, humidity, rainfall or pressure. Then the program will ask the user for the number of data points they want to plot. Finally, the program will produce a plot of the selected weather data from the Natick, MA weather station. "
    ]
   },
   {
@@ -31,9 +31,9 @@
    "source": [
     "### Example of Final Functionality\n",
     "\n",
-    "Below is an example of how the final lab7.py script will work:\n",
+    "Below is an example of how the final Python script will work:\n",
     "    \n",
-    "```\n",
+    "```text\n",
     "\n",
     "Which weather type (temperature, humidity, rainfall or pressure)? temperature\n",
     "\n",
@@ -69,17 +69,17 @@
     "\n",
     "#### user_input() function\n",
     "\n",
-    "```user_input()``` A function to gather user input and validate it. The input of this function will be null (), as the requests for user input will come from within the body of the function. Include error checking as part of the function. The output of the function will be a 1D matrix used by the ```call_API()``` function below. \n",
+    "```user_input()``` A function to gather user input and validate it. The input of this function will be null (), as the requests for user input will come from within the body of the function. Include error checking as part of the function. The output of the function will be a string (corresponding to temperature, humidity, pressure or rainfall) and an integer (between 1 and 8000). The output of the ```user_input()``` function will be used by the ```call_API()``` function below. \n",
     "\n",
     "#### call_API() function\n",
     "\n",
     "```call_API()``` A function to call the ThingSpeak Web API to retrieve the desired weather data. See http://www.mathworks.com/help/thingspeak/get-channel-field-feed.html and Pandas ```read_csv()``` function. \n",
     "\n",
-    "An example web API call is: ```df = pd.read_csv('https://api.thingspeak.com/channels/12397/fields/4.csv?results=20')``` Only the desired weather data type and number of data points should be retrieved. Note the input for this function will come from the ```user_input()``` function above and the output will be sent to the ```clean_data()``` function below. \n",
+    "An example web API call is: ```df = pd.read_csv('https://api.thingspeak.com/channels/12397/fields/4.csv?results=20')``` Only the desired weather data type and number of data points should be retrieved. Note the input for this function will come from the ```user_input()``` function above and the output (a Pandas dataframe) will be sent to the ```clean_data()``` function below. \n",
     "\n",
     "#### clean_data() function\n",
     "\n",
-    "```clean_data()``` A function to clean up the data and simplify it to a 1D matrix. See the Pandas documentation for information on how to convert a column of a Panda's dataframe into a Python list or Numpy array. Try using: df = pd.read_csv('https://api.thingspeak.com/channels/12397/fields/4.csv?results=20') to bring in a sample data set. Note the input of this function comes from the ```call_API()``` function above and the output needs to be a list or 1D array that will be used by the ```plot_data()``` function below. \n",
+    "```clean_data()``` A function to clean up the data and simplify it to a 1D array. See the Pandas documentation for information on how to convert a column of a Panda's dataframe into a Python list or NumPy array. Try using: ```df = pd.read_csv('https://api.thingspeak.com/channels/12397/fields/4.csv?results=20')``` to bring in a sample data set when you test this function. Note the input of this function comes from the ```call_API()``` function above and the output needs to be a list or 1D array that will be used by the ```plot_data()``` function below. \n",
     "\n",
     "#### plot_data()function\n",
     "\n",
@@ -92,7 +92,7 @@
    "source": [
     "### Final Notebook\n",
     "\n",
-    "After sharing the four functions among your group, each student needs to create their own notebook (.ipynb-file) that imports and calls the four functions and completes the programming task. The final notebook should be run, data entered and a plot produced.\n",
+    "After sharing the four functions among your group, each student needs to create their own notebook (.ipynb-file) that imports and calls the four functions and completes the programming task. The final notebook should be run, data entered (temperature, 800 data points) and a plot produced.\n",
     "\n",
     "Your group will have to decide on a couple things: \n",
     " \n",
@@ -111,7 +111,7 @@
    "source": [
     "## Deliverables\n",
     "\n",
-    "Each student’s submissions for the lab must contain the following files (all four function files and your Python script that calls the four functions) regardless of which function you constructed. Upload these 5 files to the D2L Lab 7 Uploads folder. \n",
+    "Each student’s submissions for the lab must contain the following files (all four function files and your Python script that calls the four functions) regardless of which function you constructed. Your ```lab7.ipynb``` notebook should contain an example of a user asking for ```temperature``` and ```800``` data points. The ```lab7.ipynb``` file should show the resulting plot. Upload these 5 files to the D2L Lab 7 Uploads folder. \n",
     "\n",
     " * user_input.py \n",
     "\n",
