--- a/ENGR114-Labs/Lab06-Audio_Filtering/ENGR114-Lab06-Image_Filtering.ipynb
+++ b/ENGR114-Labs/Lab06-Audio_Filtering/ENGR114-Lab06-Image_Filtering.ipynb
@@ -22,20 +22,20 @@
    "source": [
     "## Lab\n",
     "\n",
-    "In this lab assignment, your group will show a user an image and soliciate input from the user regarding how to modify the image. Based on the user's input, you will re-display the image with modifications. \n",
+    "In this lab assignment, you will show a user an image and solicit input from the user regarding how to modify the image. Based on the user's input, you will re-display the image with modifications. \n",
     "\n",
     "The image below is the image the user will modify:\n",
     "\n",
     "![stinkbug](stinkbug.png)\n",
     "\n",
-    "The image can be found online here: [https://matplotlib.org/users/image_tutorial.html](https://matplotlib.org/users/image_tutorial.html)\n",
+    "The image can be found on-line here: [https://matplotlib.org/users/image_tutorial.html](https://matplotlib.org/users/image_tutorial.html)\n",
     "\n",
-    "Images can be displayed using Python and Matplotlib. The code cell below demonstrates how to read and display an image with Matplotlib. Ensure that the image you want to show is in the same directory as your Jupyter notebook."
+    "Images can be displayed using Python and Matplotlib. The code cell below demonstrates how to read and display an image with Matplotlib. Ensure the image you want to show is in the same directory as your Jupyter notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -54,6 +54,7 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "\n",
     "image = plt.imread('stinkbug.png')\n",
     "\n",
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -106,14 +107,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Construct a script that tells a user different colormaps they can select from. Then use Python's ```input()``` function to ask the user for a color map. Then ask the user if they want gridlines. Finally ask the user if they want tick labels. After the user selects all of the options, show the user the image based on their preferences.\n",
+    "Construct a script that tells a user their colormap options. Then use Python's ```input()``` function to ask the user for a color map. Then ask the user if they want gridlines. Finally ask the user if they want tick labels. After the user selects all of the options, show the user the image based on their preferences.\n",
     "\n",
     "The code below demonstrates how the script might function:\n",
     "\n",
     "```text\n",
-    "Possible color maps are: Greys, gist_earth, ocean and terrain\n",
+    "Your color maps options are: Greys, gist_earth, ocean and terrain\n",
     "\n",
-    "Select a color map:\n",
+    "Please select a color map:\n",
     "terrain\n",
     "\n",
     "Do you want grid lines? (yes or no):\n",
@@ -132,7 +133,7 @@
    "source": [
     "## Deliverables\n",
     "\n",
-    "Each student’s submission for the lab should be one Jupyter notebook .ipynb-file. Upload to the appropriate D2L drop box.\n",
+    "Each student’s submission for the lab should be one Jupyter notebook .ipynb-file. Run your Jupyter notebook as a user and select ```terrain``` as the colormap, ```yes``` gridlines and ```no``` ticklabels. Show the resulting image. Upload to the appropriate D2L drop box.\n",
     "\n",
     "**lab6.ipynb** \n"
    ]
